# sshtunnel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  models.rs  ssh_args.rs  ssh_launch.rs
crates/core/tests/: ssh_launch.rs  tunnel_definition.rs
docs/: project-documentation.md
docs/superpowers/plans/: 2026-03-27-backend-runtime-tests.md  2026-03-27-frontend-list-rendering.md  2026-03-27-frontend-status-mapping.md  2026-03-27-ssh-stderr-log-capture.md  2026-03-27-ssh-tunnel-manager.md  2026-03-28-ci-package-artifacts.md  2026-03-28-connect-disconnect-autostart-command-tests.md  2026-03-28-desktop-ui-redesign.md  2026-03-28-diagnostic-log-panel.md  2026-03-28-save-delete-command-tests.md  2026-03-28-status-summary-cards.md  2026-03-28-tray-disconnect-all-tests.md  2026-03-30-ci-node24-actions.md  2026-03-30-command-center-ui-modernization.md  2026-03-30-desktop-form-error-and-key-picker.md  2026-03-30-editor-required-field-feedback.md  2026-03-30-page-visible-copy-localization.md  2026-03-30-windows-hide-ssh-console.md  2026-03-31-audit-fixes.md  2026-03-31-drawer-form-readability.md  2026-03-31-package-name-and-tray-copy.md  2026-03-31-ssh-connectivity-test.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: debug_trace.rs  lib.rs  main.rs  managed_process.rs  tray_model.rs  tray_model_tests.rs
web/: app.js  index.html  styles.css  view-model.js
web/tests/: app.test.js  view-model.test.js
(+23 files in other folders)
