[package]
name = "sshtunnel-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "sshtunnel_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
keyring = { version = "3", features = ["windows-native", "sync-secret-service"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sshtunnel-core = { path = "../crates/core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
anyhow = "1"
libc = "0.2"
